# CppMicroServices

./: .gitignore  CMakeLists.txt
exes/rc/: CMakeLists.txt
exes/shell/: CMakeLists.txt
tools/rc/: CMakeLists.txt
tools/shell/: CMakeLists.txt
