find_package(CppMicroServices COMPONENTS ShellService REQUIRED)

include_directories(../../third_party)

set(srcs
  Shell.cpp
  ../../third_party/linenoise.c
)

if(MSVC)
  set_property(
    SOURCE ../../third_party/linenoise.c APPEND_STRING
    PROPERTY COMPILE_FLAGS " /wd4996"
  )
endif()

set(US_SHELL_EXECUTABLE_TARGET usShell)
set(US_SHELL_EXECUTABLE_OUTPUT_NAME ${US_SHELL_EXECUTABLE_TARGET}${US_GLOBAL_VERSION_SUFFIX})

add_executable(${US_SHELL_EXECUTABLE_TARGET} ${srcs})
set_property(TARGET ${US_SHELL_EXECUTABLE_TARGET} PROPERTY OUTPUT_NAME ${US_SHELL_EXECUTABLE_OUTPUT_NAME})

set_target_properties(${US_SHELL_EXECUTABLE_TARGET}
  PROPERTIES
  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/tools/${PROJECT_NAME_LOWER}"
  LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/tools/${PROJECT_NAME_LOWER}"
  )

target_link_libraries(${US_SHELL_EXECUTABLE_TARGET} ${US_LIBRARIES})

# file(INSTALL 
#   "${CMAKE_BINARY_DIR}/bin/${US_SHELL_EXECUTABLE_TARGET}${US_GLOBAL_VERSION_SUFFIX}.exe"
#   DESTINATION "${CMAKE_BINARY_DIR}/tools/${PROJECT_NAME_LOWER}")

message(STATUS "US_SDK_INSTALL_COMPONENT = ${US_SDK_INSTALL_COMPONENT}")
if(NOT US_NO_INSTALL)
  install(TARGETS ${US_SHELL_EXECUTABLE_TARGET}
          EXPORT ${PROJECT_NAME}Targets
          FRAMEWORK DESTINATION . ${US_SDK_INSTALL_COMPONENT}
          RUNTIME DESTINATION "tools/${PROJECT_NAME_LOWER}" ${US_SDK_INSTALL_COMPONENT})
endif()
